--- a/style.css
+++ b/style.css
@@ -1,10 +1,28 @@
-
 body {
-    display: flex;
-    justify-content: center;
+display: flex;
+justify-content: center;
 }
 
-div.container1 {
+.color-1 { background-color: darkslateblue; }
+.colors:nth-child(2) { background-color: royalblue; }
+.colors:nth-child(3) { background-color: deeppink; }
+.colors:nth-child(4) { background-color: yellow; }
+.colors:nth-child(5) { background-color: springgreen; }
+.colors:nth-child(6) { background-color: bisque; }
+.colors:nth-child(7) { background-color: aquamarine; }
+.colors:nth-child(8) { background-color: chartreuse; }
+.colors:nth-child(9) { background-color: orangered; }
+.colors:nth-child(10) { background-color: white; border: solid grey 1px;}
+.colors:nth-child(even) { margin-left: 40px; }
+
+.colors {
+border-radius: 50%;
+border: white double 5px;
+width: 50px;
+height: 50px;   
+}
+
+div.container {
     display: flex;
     margin-top: 50px;
 }
@@ -16,5 +34,12 @@ div.container1 {
 }
 
 .H:hover{
-    background-color: orangered;
+    background-color: black;
 }
+
+.palette {
+    margin-left: 50px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
